Update portfilio and about text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <p class="text">
                     Is it possible to become a Full Stack Web Developer while having a full-time job and two kids? That’s what I was hoping early in 2022 when I decided to plunge headfirst into the rabbit hole of learning JavaScript on my own. 
                     Before then, I hadn't done much in terms of web development since I was a kid, and the &lt;frame&gt; attribute was super hot, so I wasn’t sure what to expect, but it has truly been a blast and the online community is great and super helpful! <br><br>
-                    Admittedly, it’s not always easy, but every time my motivation or confidence levels sink to miserable levels, I look back at all I've learned in this past year and a half and that really keeps me going!
+                    Fast forward to today, I’m working as an IT consultant, combining my skills in frontend development and project management to deliver user-friendly, accessible solutions with a high technical standard. 
+                    My goal now is to solidify my frontend knowledge, dive deeper into relevant frameworks and libraries, improve my design process with UX/UI, and take steps toward becoming a full-stack developer.
                     <br><br></p>
               </div>
               <i class='fas fa-angle-double-up close-arrow'></i>
@@ -41,9 +42,9 @@
             <div class ="content">
               <div id="career-content">
                 <p class="text">
-                    I started off as a management consultant to primarily Fortune 500 companies, proceeded to a business consultant for SME companies, <b>to end up as a front-end developer?</b> 
+                    I started off as a management consultant to primarily Fortune 500 companies, proceeded to a business consultant for SME companies, <b>and now work as a project manager & front-end developer!</b> 
                     <br></br>After I graduated from my master's studies in Business Administration 2014, I started as a management consultant at EY Advisory Services. 
-                    I mostly worked in the consumer product sector with IT-related projects. Since I moved back to Kalmar four years ago, I've worked as a business advisor for smaller companies and focused more on sustainability. 
+                    I mostly worked in the consumer product sector with IT-related projects. Since I moved back to Kalmar five years ago, I've worked as a business advisor for smaller companies and focused more on sustainability before starting my current role as an IT consultant.
                     <br><br> I have worked as a project manager my whole career both at EY and my current employer and have a PRINCE2 Project Management certificate. 
                     Now I aim to combine the front-end developer role with my previous business and project management experience to hopefully bring a little extra value to the role.
                     <br><br>And just to emphasize how professional I can be, please refer to the portrait. Pretty amazing, right? 
@@ -59,10 +60,10 @@
             <div class ="content">
                 <div id="skills-content">
                     <p class="text">
-                        I’m confident with the front-end aspects of JavaScript (including Webpack, modules and SPA) as well as semantic HTML (such as WCAG), responsive CSS (including BEM methodology) and Git/GitHub. I’m currently focusing on learning Typescript and popular frameworks such as React and Bootstrap. 
-                        I was tempted to start in this end but wanted to learn vanilla JavaScript and CSS first to really understand the fundamentals and improve my problem-solving skills.
+                        I’m confident with the front-end aspects of JavaScript as well as semantic HTML (including WCAG standards), responsive CSS (using methodologies like BEM), and Git/GitHub. In my current role, 
+                        I’ve worked on several projects using Vue 3 and Bootstrap, and I’m also exploring React in my spare time to broaden my skill set.
                         <br><br>
-                        My goal is to be a full-stack developer, so my next steps include NodeJS and MongoDB.
+                        My goal is to become a full-stack developer, so my next steps include diving deeper into Node.js and MongoDB.
                     </p>
                     <div class="skill-list">
                         <div class="image-container">
@@ -89,13 +90,17 @@
                             <img src="./images/github.png" alt="GitHub">
                             <p>github</p>
                         </div>
-                        <div class="image-container">
-                            <img src="./images/bootstrap.png" alt="Bootstrap">
-                            <p>bootstrap</p>
+                        <div class="image-container vue">
+                            <img src="./images/vue.png" alt="Vue3">
+                            <p>vue</p>
                         </div>
                         <div class="image-container">
                             <img src="./images/react.png" alt="React">
                             <p>react</p>
+                        </div>
+                        <div class="image-container">
+                            <img src="./images/bootstrap.png" alt="Bootstrap">
+                            <p>bootstrap</p>
                         </div>
                     </div>
                 </div>
@@ -107,8 +112,9 @@
             <div class ="content">
                 <div id="portfolio-content">
                     <p class="text">
-                        Here are some of my previous projects that I've created purely for my own amusement or to enhance my understanding of a specific aspect of JavaScript. 
-                        <br><br> Also, down in the bottom left corner you'll find a link to my GitHub profile if you're interested in reviewing some of the code or exploring more of my work.
+                        Here are some of my previous projects that I've created on my spare time purely for my own amusement or to enhance my understanding of a specific aspect of JavaScript. 
+                        <br><br> Also, down in the bottom left corner you'll find a link to my GitHub profile if you're interested in reviewing some of the code or exploring more of my work. 
+                        I'm not allowed to publish my work projects obviously, but I'm happy to discuss them if you're interested.
                     </p> 
                     <div class="portfolio-list">
                         <div class="portfolio-container" id="css-portfolio">
