Update skills and about text

--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
             <div class ="content">
                 <div id="portfolio-content">
                     <p class="text">
-                        Here are some of my previous projects that I've created on my spare time purely for my own amusement or to enhance my understanding of a specific aspect of JavaScript. 
-                        <br><br> Also, down in the bottom left corner you'll find a link to my GitHub profile if you're interested in reviewing some of the code or exploring more of my work. 
-                        I'm not allowed to publish my work projects obviously, but I'm happy to discuss them if you're interested.
+                        Here are some of my previous projects that I've created on my spare time purely for my own amusement or to enhance my understanding of a specific aspect of JavaScript.
+                        I'm not allowed to publish my work projects obviously, but I'm happy to discuss them if you're interested. 
+                        <br><br> Down in the bottom left corner you'll find a link to my GitHub profile if you're interested in reviewing some of the code or exploring more of my work. 
+                        
                     </p> 
                     <div class="portfolio-list">
                         <div class="portfolio-container" id="css-portfolio">
@@ -176,11 +177,11 @@
                 <div id="personal-content">
                   <p class="text">
                     Sections like this are the hardest to write, which is probably why I put it last on the page. I would prefer just writing code; then, if I get stuck, I can at least Google it. 
-                    <br><br>But anyway, I’m Max, I’m 36 years old, and I have two amazing daughters (six and three years old). Despite what I sometimes think, I am a pretty social person and enjoy having people around me 
+                    <br><br>But anyway, I’m Max, I’m 37 years old, and I have two amazing daughters (seven and five years old). Despite what I sometimes think, I am a pretty social person and enjoy having people around me 
                     (probably a side effect of having seven siblings).
                     <br><br>I have a tendency to become very interested in certain things, and sometimes I get really obsessed with topics like programming, cocktails, hiking, etc. 
                     <br><br>When I have the opportunity, I enjoy being outside, either spending a few days in the woods or exploring the surrounding areas on my paddle board. 
-                    I’m also terrified of seeing how many hours I’ve actually spent on The Witcher 3.
+                    I’m also terrified of seeing how many hours I’ve actually spent on Baldur's Gate 3.
                      <br><br></p>
                   <div class="token2"></div>
                 </div>
